hphp/test/slow/reified-generics/static-property-in-reified-class.php.expectf
Fatal error: You may not use static properties in a class with reified type parameters in %s on line 4
